<resources>
    <string name="app_name">My Application</string>
<!--    10.0.2.2-->
    <string name="ip1">http://192.168.0.123:8080/shixun3</string>
    <string name="ip">http://192.168.0.123:8080/shixun3/menu/</string>

    <string name="photoip">http://192.168.0.123:8080/shixun3/upload/</string>

    <string name="classify">食物种类</string>
    <string name="filter">筛选</string>
    <string name="producing">口味</string>

    <string name="ok">确定</string>

    <string name="cancal">重置</string>

    <string name="ipuser">http://192.168.0.123:8080/shixun3</string>
</resources>

