<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FF3333"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingLeft="22dp"
            android:text="@string/classify"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <GridView
            android:id="@+id/gridview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:gravity="center"
            android:listSelector="#00000000"
            android:numColumns="3"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:scrollbars="none"
            android:verticalSpacing="10dp"></GridView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingLeft="22dp"
            android:text="@string/producing"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />
        <GridView
            android:id="@+id/gridview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center"
            android:listSelector="#00000000"
            android:numColumns="3"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:scrollbars="none"
            android:verticalSpacing="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancal" />

        <Button

            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_item_clicked"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>


